fix:mobile banner cards alignment

--- a/src/components/Common/SliderCard/sliderCard.css
+++ b/src/components/Common/SliderCard/sliderCard.css
@@ -112,4 +112,7 @@
         transform: scale(1.1);
     }
     
+    .hero__banner .hero__banner_right {
+        margin-right: auto;
+    }
 }
